test-cases/valid/reject/undefined_variable.ul
void main() {
    string s_;
    print s; // No such variable
}
